--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<link rel="icon" href="src/images/icon-computer.png" type="image/png" />
 		<title>Developer Portfolio</title>
 	</head>
-
 	<body>
 		<!-- nav -->
 
@@ -40,114 +39,129 @@
 			</div>
 		</nav>
 
-		<!-- hero -->
-		<section id="hero" class="hero">
-			<div class="container">
-				<div class="text">
-					<h1>vlado<span>Ivković</span></h1>
-					<p>FrontEnd Developer</p>
-					<a
-						class="btn--animation"
-						href="src/VladoIvkovic-CV.pdf"
-						target="_blank"
-						>resume
-					</a>
-				</div>
-				<div class="socials">
-					<a href="https://www.linkedin.com/in/vlado-ivkovic/" target="_blank">
-						<img src="src/images/linkedin.svg" alt="linkedin-svg" />
-					</a>
-					<a href="https://github.com/Burgundy13" target="_blank">
-						<img src="src/images/github.svg" alt="github-svg" />
-					</a>
-				</div>
-			</div>
-		</section>
+		<main>
+			<!-- hero -->
 
-		<!-- about -->
-		<section id="about" class="about">
-			<div class="ovarlay">
+			<section id="hero" class="hero">
 				<div class="container">
-					<div class="text">
-						<h2>Hey there!</h2>
-						<p>
-							My name is Vlado. I am a FrontEnd Developer, with a passion for
-							creating beautiful web experiences.
-						</p>
-						<br />
-						<p>
-							Fascinated by technology, I am eager to learn new technologies and
-							programming concepts that hone my skills as a developer and make
-							my projects skyrocket.
-						</p>
+					<div class="hero__text">
+						<h1 class="hero__heading">
+							vlado<span class="hero__subheading">Ivković</span>
+						</h1>
+						<p class="hero__description">FrontEnd Developer</p>
+						<a
+							class="btn--animation"
+							data-js="button-animation"
+							href="src/VladoIvkovic-CV.pdf"
+							target="_blank"
+							>resume
+						</a>
 					</div>
-					<div class="about-img">
-						<img src="src/images/DSC_0185.JPG" alt="Headshot pic" />
+					<div class="hero__socials">
+						<a
+							class="hero__link"
+							href="https://www.linkedin.com/in/vlado-ivkovic/"
+							target="_blank"
+						>
+							<img src="src/images/linkedin.svg" alt="linkedin-svg" />
+						</a>
+						<a
+							class="hero__link"
+							href="https://github.com/Burgundy13"
+							target="_blank"
+						>
+							<img src="src/images/github.svg" alt="github-svg" />
+						</a>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<!--projects -->
+			<!-- about -->
 
-		<section id="projects" class="projects">
-			<div class="container">
-				<h2>Check out some of my projects...</h2>
-				<div class="filter-container"></div>
-			</div>
-		</section>
-
-		<section class="contact">
-			<div class="container">
-				<article class="projects-description">
-					<div class="text">
-						<p>
-							I am, at heart, a creative thinker; an artistic type with a
-							strange obsession with code.
+			<section id="about" class="about">
+				<div class="ovarlay">
+					<div class="container">
+						<div class="text">
+							<h2>Hey there!</h2>
+							<p>
+								My name is Vlado. I am a FrontEnd Developer, with a passion for
+								creating beautiful web experiences.
+							</p>
 							<br />
-							...
-							<br />
-							I enjoy helping entrepreneurs bring their ideas to life in the
-							digital space, and I look forward to beginning yet another
-							successful project with you!
-						</p>
-						<p>I want to bring your ideas to life.</p>
-						<p class="cta">
-							<span>My Toolbelt includes:</span> <br />
-							HTML5, CSS3, SASS, Bootstrap, JavaScript, jQuery, React, Angular,
-							GitHub, Adobe Photoshop, Adobe Ilustrator
-						</p>
-						<p>What I can accomplish for you:</p>
-						<ul>
-							<li>- Create rich and compelling user interfaces.</li>
-							<li>- Build web applications with dynamic content.</li>
-							<li>- Prototype new designs (mockup-to-product)</li>
-						</ul>
+							<p>
+								Fascinated by technology, I am eager to learn new technologies
+								and programming concepts that hone my skills as a developer and
+								make my projects skyrocket.
+							</p>
+						</div>
+						<div class="about-img">
+							<img src="src/images/DSC_0185.JPG" alt="Headshot pic" />
+						</div>
 					</div>
-					<div id="contact" class="contact__form">
-						<h3>Let's get in touch</h3>
-						<form name="contact" method="POST" data-netlify="true">
-							<div class="form-control">
-								<input type="text" name="name" id="name" r />
-								<label>Name</label>
-							</div>
-							<div class="form-control">
-								<input type="email" name="email" id="email" />
-								<label>Email</label>
-							</div>
-							<textarea
-								name="message"
-								id="message"
-								cols="30"
-								rows="7"
-								placeholder="👋"
-							></textarea>
-							<input type="submit" name="submit" id="submit" value="Send" />
-						</form>
-					</div>
-				</article>
-			</div>
-		</section>
+				</div>
+			</section>
+
+			<!--projects -->
+
+			<section id="projects" class="projects">
+				<div class="container">
+					<h2>Check out some of my projects...</h2>
+					<div class="filter-container"></div>
+				</div>
+			</section>
+
+			<section class="contact">
+				<div class="container">
+					<article class="projects-description">
+						<div class="text">
+							<p>
+								I am, at heart, a creative thinker; an artistic type with a
+								strange obsession with code.
+								<br />
+								...
+								<br />
+								I enjoy helping entrepreneurs bring their ideas to life in the
+								digital space, and I look forward to beginning yet another
+								successful project with you!
+							</p>
+							<p>I want to bring your ideas to life.</p>
+							<p class="cta">
+								<span>My Toolbelt includes:</span> <br />
+								HTML5, CSS3, SASS, Bootstrap, JavaScript, jQuery, React,
+								Angular, GitHub, Adobe Photoshop, Adobe Ilustrator
+							</p>
+							<p>What I can accomplish for you:</p>
+							<ul>
+								<li>- Create rich and compelling user interfaces.</li>
+								<li>- Build web applications with dynamic content.</li>
+								<li>- Prototype new designs (mockup-to-product)</li>
+							</ul>
+						</div>
+						<div id="contact" class="contact__form">
+							<h3>Let's get in touch</h3>
+							<form name="contact" method="POST" data-netlify="true">
+								<div class="form-control">
+									<input type="text" name="name" id="name" r />
+									<label>Name</label>
+								</div>
+								<div class="form-control">
+									<input type="email" name="email" id="email" />
+									<label>Email</label>
+								</div>
+								<textarea
+									name="message"
+									id="message"
+									cols="30"
+									rows="7"
+									placeholder="👋"
+								></textarea>
+								<input type="submit" name="submit" id="submit" value="Send" />
+							</form>
+						</div>
+					</article>
+				</div>
+			</section>
+		</main>
 
 		<footer>
 			<div class="container">
