hesro section fix

--- a/index.html
+++ b/index.html
@@ -81,21 +81,29 @@
 			<section id="about" class="about">
 				<div class="ovarlay">
 					<div class="container">
-						<div class="text">
+						<div class="about__text">
 							<h2>Hey there!</h2>
-							<p>
-								My name is Vlado. I am a FrontEnd Developer, with a passion for
-								creating beautiful web experiences.
+							<p class="about__description">
+								My name is Vlado, a FrontEnd Developer with a knack for turning
+								lines of code into visually enchanting digital experiences.
 							</p>
 							<br />
-							<p>
-								Fascinated by technology, I am eager to learn new technologies
-								and programming concepts that hone my skills as a developer and
-								make my projects skyrocket.
+							<p class="about__description">
+								Technology is my playground, and curiosity is my compass. The
+								thrill of diving into uncharted territories, exploring new
+								technologies, and embracing programming intricacies is what
+								keeps my enthusiasm alive. In the grand scheme of pixels and
+								programming, I see each project as a unique adventure.
+								Challenges are opportunities, and every bug is a puzzle waiting
+								to be solved.
 							</p>
 						</div>
-						<div class="about-img">
-							<img src="src/images/DSC_0185.JPG" alt="Headshot pic" />
+						<div class="img__wrapper">
+							<img
+								class="about__img"
+								src="src/images/DSC_0185.JPG"
+								alt="Headshot pic"
+							/>
 						</div>
 					</div>
 				</div>
